<resources>
    <string name="app_name">Unispan</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_user">User</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Aceptar</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_user">The user or password is invalid</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">Devoluciones</string>
    <string name="title_activity_login">Login</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_devolution">DevolutionActivity</string>
    <string name="title_activity_equipment">EquipmentActivity</string>
    <string name="title_activity_devolution_by_equipment">DevolutionByEquipmentActivity</string>

    <string name="string_label_equiment">Equipo:</string>
    <string name="string_label_id_equiment">ID:</string>
    <string name="string_label_state">Situación:</string>

    <string name="string_label_state_clean">Por Limpieza</string>
    <string name="string_label_state_repair">Por Limpieza</string>
    <string name="string_label_state_replacement">Por Reposición</string>

    <string name="string_sample_customer">Los Constructores SAC</string>
    <string name="string_sample_proyect">Edificio Los Alamos</string>
    <string name="string_sample_name_group">Encofrados AllSteel</string>
    <string name="string_sample_count_group">0 de 4</string>
    <string name="string_sample_name_equiment">Equipo 1</string>
    <string name="string_sample_state_equiment">Pendiente</string>
    <string name="string_sample_schedule">08:00 - 10:00</string>
    <string name="string_sample_id_equiment">ID</string>
</resources>
