<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_devolution_by_equipment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="pe.com.unispan.mobile.activities.DevolutionByEquipmentActivity"
    tools:showIn="@layout/activity_devolution_by_equipment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/string_sample_customer"
                android:id="@id/customerTextView"
                android:textStyle="italic"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/string_sample_proyect"
                android:id="@id/buildTextView"
                android:paddingTop="20dp"
                android:textStyle="bold"
                android:gravity="end"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/string_sample_name_group"
                android:id="@id/nameGroupTextView"
                android:textStyle="italic"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:text="@string/string_label_equiment"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/string_sample_name_equiment"
                android:textStyle="italic"
                android:id="@+id/nameEquipmentTextView"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:text="@string/string_label_id_equiment"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/string_sample_id_equiment"
                android:textStyle="italic"
                android:id="@+id/idEquimentTextView"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:text="@string/string_label_state"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="italic"
                    android:text="@string/string_label_state_clean"
                    android:id="@+id/PorLimpiezaTextView"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="italic"
                    android:text="@string/string_label_state_repair"
                    android:id="@+id/PorReparacionTextView"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="italic"
                    android:text="@string/string_label_state_replacement"
                    android:id="@+id/PorReposicionTextView"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
