<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/devolutionCardView"
    android:layout_height="80dp"
    android:layout_width="match_parent"
    android:layout_margin="5dp"
    app:cardCornerRadius="4dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:id="@+id/pictureImageView"
            android:src="@mipmap/ic_one"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingEnd="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="18dp"
                android:gravity="end"
                android:text="@string/string_sample_customer"
                android:id="@+id/customerTextView"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:text="@string/string_sample_proyect"
                android:id="@+id/buildTextView"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="italic"
                android:text="@string/string_sample_schedule"
                android:id="@+id/scheduledTextView"/>
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>