<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_equipment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="pe.com.unispan.mobile.activities.EquipmentActivity"
    tools:showIn="@layout/activity_equipment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/string_sample_customer"
                android:id="@id/customerTextView"
                android:textStyle="italic"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/string_sample_proyect"
                android:id="@id/buildTextView"
                android:paddingTop="20dp"
                android:textStyle="bold"
                android:gravity="end"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/string_sample_name_group"
                android:id="@id/nameGroupTextView"
                android:textStyle="italic"/>
        </LinearLayout>
        <android.support.v7.widget.RecyclerView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/equipmentRecyclerView"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />

    </LinearLayout>

</RelativeLayout>
